<create service> for http call to get data from api

--- a/weather/src/app/app.component.html
+++ b/weather/src/app/app.component.html
@@ -52,7 +52,7 @@
       <img *ngIf="false" src="assets/images/hot.jpg" class="" alt="...">
       <img *ngIf="true" src="assets/images/cold.jpg" class="" alt="...">
       <div class="card-body" style="background-color:#ece5f3">
-        <p class="card-text">
+        <p class="card-text text-primary">
           More Information:</p>
 
         <div class="d-flex justify-content-between">
