chore:<footer> change the background cololr

--- a/weather/src/shared/footer/footer.component.html
+++ b/weather/src/shared/footer/footer.component.html
@@ -8,7 +8,7 @@
       <!-- Section: Social media -->
       <section
                class="d-flex justify-content-between p-4"
-               style="background-color: #6351ce"
+               style="background-color: #d7a0e4"
                >
         <!-- Left -->
         <div class="me-5">
