--- a/weather/src/shared/footer/footer.component.html
+++ b/weather/src/shared/footer/footer.component.html
@@ -49,15 +49,15 @@
             <!-- Grid column -->
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
-              <h6 class="text-uppercase fw-bold">Company name</h6>
+              <h6 class="text-uppercase fw-bold"> Weather World</h6>
               <hr
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p>
-                Here you can use rows and columns to organize your footer
-                content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit.
+                Here you can get information about weather. You can Simply 
+                search for weather for the Indian  city you want !
+
               </p>
             </div>
             <!-- Grid column -->
@@ -65,19 +65,19 @@
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
               <!-- Links -->
-              <h6 class="text-uppercase fw-bold">Products</h6>
+              <h6 class="text-uppercase fw-bold">Projects</h6>
               <hr
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p>
-                <a href="#!" class="text-white">MDBootstrap</a>
+                <a href="#!" class="text-white">Weather App</a>
               </p>
               <p>
-                <a href="#!" class="text-white">MDWordPress</a>
+                <a href="#!" class="text-white">Restaurant employee management </a>
               </p>
               <p>
-                <a href="#!" class="text-white">BrandFlow</a>
+                <a href="#!" class="text-white"></a>
               </p>
               <p>
                 <a href="#!" class="text-white">Bootstrap Angular</a>
@@ -116,10 +116,10 @@
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
-              <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-              <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+              <p><i class="fas fa-home mr-3"></i> Sri ganganagar, Raj 335001, IN</p>
+              <p><i class="fas fa-envelope mr-3"></i> waziransari930@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i> + 91 9309376322</p>
+              <p><i class="fas fa-print mr-3"></i> + 91 6375453431</p>
             </div>
             <!-- Grid column -->
           </div>
@@ -135,7 +135,7 @@
            >
         © 2020 Copyright:
         <a class="text-white" href="https://mdbootstrap.com/"
-           >MDBootstrap.com</a
+           >Waziransari.com</a
           >
       </div>
       <!-- Copyright -->
